fixed add ticket

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -43,7 +43,7 @@
 		
 
 		<div class="container">
-			<p class="lead mb-4 text-muted text-center">On conçoit la solution optimale de développement web pour chaque
+			<p class="lead mb-4 text-muted text-center text-justify">On conçoit la solution optimale de développement web pour chaque
 							situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis
 							pour vos besoins uniques.
 			</p>
@@ -55,14 +55,14 @@
 		<div class="container">
 			<div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
 				<div class="col-12 col-lg-6">
-					<img class="img-fluid rounded" loading="lazy" src="{{ asset('img/about.jpg') }}" alt="À propos 2">
+					<img class="img-fluid rounded" loading="lazy" src="{{ asset('img/support3.svg') }}" alt="À propos 2">
 				</div>
 				<div class="col-12 col-lg-6">
 					<div class="row justify-content-xl-center">
 						<div class="col-12 col-xl-10">
 							<h2 class="mb-3">Pourquoi nous choisir ?</h2>
-							<p class="lead">Fondée en 2023, ScriptzenIT fait son entrée dans le domaine numérique en redéfinissant les frontières de l'innovation et de l'excellence. Portée par une vision avant-gardiste, notre entreprise s'engage à remodeler le monde numérique. </p>
-							<p class="lead">Notre approche est centrée sur nos clients, et nous collaborons avec des entreprises de toutes tailles et de tous secteurs pour concevoir des stratégies sur mesure qui répondent précisément à leurs besoins et objectifs spécifiques.</p>
+							<p class="lead text-justify">Fondée en 2023, ScriptzenIT fait son entrée dans le domaine numérique en redéfinissant les frontières de l'innovation et de l'excellence. Portée par une vision avant-gardiste, notre entreprise s'engage à remodeler le monde numérique. </p>
+							<p class="lead text-justify">Notre approche est centrée sur nos clients, et nous collaborons avec des entreprises de toutes tailles et de tous secteurs pour concevoir des stratégies sur mesure qui répondent précisément à leurs besoins et objectifs spécifiques.</p>
 							<div class="d-flex align-items-center mb-3">
 								<div class="me-3 text-primary">
 									<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
@@ -81,16 +81,6 @@
 								</div>
 								<div>
 									<p class="fs-5 m-0">Nous offrons des services au-delà des attentes.</p>
-								</div>
-							</div>
-							<div class="d-flex align-items-center mb-4 mb-xl-5">
-								<div class="me-3 text-primary">
-									<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-										<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-									</svg>
-								</div>
-								<div>
-									<p class="fs-5 m-0">Engagez-nous pour atteindre vos objectifs.</p>
 								</div>
 							</div>
 							<a href="{{ url('app_login') }}" class="btn bsb-btn-xl btn-outline-primary rounded-pill">Connectez-vous maintenant</a>
@@ -147,8 +137,8 @@
 					<div class="col-lg-6">
 						<div class="section-title">
 							<h2>Nos Services</h2>
-							<p>Nous sommes des experts en conception et développement web, offrant des solutions sur mesure pour les professionnels et les artisans.</p>
-							<p>ScriptzenIT est prête à laisser une empreinte indélébile dans le domaine numérique en proposant des solutions inégalées et en réimaginant l'avenir de la technologie.</p>
+							<p class="text-justify">Nous sommes des experts en conception et développement web, offrant des solutions sur mesure pour les professionnels et les artisans.</p>
+							<p class="text-justify">ScriptzenIT est prête à laisser une empreinte indélébile dans le domaine numérique en proposant des solutions inégalées et en réimaginant l'avenir de la technologie.</p>
 						</div>
 					</div>
 				</div>
@@ -161,7 +151,7 @@
 							</div>
 							<div class="feature-content">
 								<h5>Design Unique</h5>
-								<p>Nous créons des designs uniques qui reflètent la personnalité de votre entreprise, vous démarquant de la concurrence.</p>
+								<p class="text-justify">Nous créons des designs uniques qui reflètent la personnalité de votre entreprise, vous démarquant de la concurrence.</p>
 							</div>
 						</div>
 					</div>
@@ -174,7 +164,7 @@
 							</div>
 							<div class="feature-content">
 								<h5>Disposition Différente</h5>
-								<p>Nous proposons des mises en page personnalisées pour répondre à vos besoins spécifiques, garantissant une expérience utilisateur optimale.</p>
+								<p class="text-justify">Nous proposons des mises en page personnalisées pour répondre à vos besoins spécifiques, garantissant une expérience utilisateur optimale.</p>
 							</div>
 						</div>
 					</div>
@@ -200,7 +190,7 @@
 							</div>
 							<div class="feature-content">
 								<h5>Réactivité</h5>
-								<p>Nos sites sont entièrement réactifs, assurant une expérience cohérente sur tous les appareils, ce qui est essentiel pour atteindre votre public cible.</p>
+								<p class="text-justify">Nos sites sont entièrement réactifs, assurant une expérience cohérente sur tous les appareils, ce qui est essentiel pour atteindre votre public cible.</p>
 							</div>
 						</div>
 					</div>
@@ -213,7 +203,7 @@
 							</div>
 							<div class="feature-content">
 								<h5>Test pour la Perfection</h5>
-								<p>Nous effectuons des tests rigoureux pour garantir la perfection, assurant un fonctionnement sans faille de votre site et une expérience utilisateur optimale.</p>
+								<p class="text-justify">Nous effectuons des tests rigoureux pour garantir la perfection, assurant un fonctionnement sans faille de votre site et une expérience utilisateur optimale.</p>
 							</div>
 						</div>
 					</div>
@@ -226,7 +216,7 @@
 							</div>
 							<div class="feature-content">
 								<h5>Options Avancées</h5>
-								<p>Nous offrons des options avancées pour répondre à vos besoins spécifiques, vous permettant de tirer le meilleur parti de votre présence en ligne.</p>
+								<p class="text-justify">Nous offrons des options avancées pour répondre à vos besoins spécifiques, vous permettant de tirer le meilleur parti de votre présence en ligne.</p>
 							</div>
 						</div>
 					</div>
@@ -235,14 +225,14 @@
 			</div>
 		</section>
 
-	{# Section Project  #}
+		{# Section Project  #}
 
 		<section>
 			<div class="container-fluid">
 				<div class="row align-items-center bg-black justify-content-center px-5 text-white 100-vh">
 					<div class="col-md-4">
 						<h1>BESOIN D'ÉCLAIRAGE ?</h1>
-						<p class="text-white">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
+						<p class="text-white text-justify">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
 						<a href="{{ url('front_project') }}" class="btn btn-warning px-5 mt-5">Nos réalisations</a>
 					</div>
 					<div class="col-md-8 pt-5 pb-5">
@@ -251,6 +241,8 @@
 				</div>
 			</div>
 		</section>
+
+		<br>
 
 		{# Technologie et outils #}
 		<div class="container">
@@ -348,7 +340,7 @@
 
 								</div>
 
-								<div class="fw-default-row">Vous êtes une marque souhaitant donner un coup de neuf à son site
+								<div class="fw-default-row text-justify">Vous êtes une marque souhaitant donner un coup de neuf à son site
 																	web ou une entreprise souhaitant redynamiser sa présence sur le web ? Optez pour une
 																	création d'application / site web sur mesure, dynamique et novateur. A votre image.
 								</div>
@@ -370,7 +362,7 @@
 
 								</div>
 
-								<div class="fw-default-row">Vous souhaitez aller un peu plus loin en ajoutant des fonctionnalités bien précises pour votre nouveau site internet ? Discutons ensemble de votre développement web sur mesure !
+								<div class="fw-default-row text-justify">Vous souhaitez aller un peu plus loin en ajoutant des fonctionnalités bien précises pour votre nouveau site internet ? Discutons ensemble de votre développement web sur mesure !
 								</div>
 							</div>
 						</div>
@@ -381,7 +373,7 @@
 
 			<div class="text-white bg-tertiary text-center pt-5 pb-5" id="agence">
 				<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
-				<p class="fw-bold mb-3 text-center lead text-white px-5">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
+				<p class="fw-bold mb-3 text-center lead text-white px-5 text-justify">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
 				<div class="ask">
 					<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
 						<span class="ml-2">
@@ -393,7 +385,7 @@
 
 			<div class="thank-you">
 				<h2>Merci d'avoir visité notre site !</h2>
-				<p>Nous apprécions votre visite. Si vous avez des questions, des commentaires ou avez besoin de plus d'informations, n'hésitez pas à nous contacter.</p>
+				<p class="text-justify">Nous apprécions votre visite. Si vous avez des questions, des commentaires ou avez besoin de plus d'informations, n'hésitez pas à nous contacter.</p>
 				<a href="{{ url('front_contact') }}" class="btn btn-primary">Nous contacter</a>
 				<!-- Avis Google -->
 				<div class="text-center">
