--- a/templates/front/subject/index.html.twig
+++ b/templates/front/subject/index.html.twig
@@ -7,10 +7,10 @@
 	</div>
 
 
-	<!-- Blog start -->
-	<div class="container">
+	<!-- Assistance start -->
+	<div class="container-fluid">
 		<section
-			id="promo" class="section offset-header">
+			id="promo" class="section">
 			<!-- blog start -->
 			<section class="blog-area pb-5">
 				<div class="container">
