--- a/templates/front/subject/show.html.twig
+++ b/templates/front/subject/show.html.twig
@@ -10,12 +10,10 @@
 
 <!-- Document Wrapper
 ============================================= -->
-<div id="wrapper">
 
     <!-- Page Title
    ============================================= -->
-    <section class="container-fluid page-title bg-primary py-6 page-title-center">
-        <div class="container">
+    <section class="page-title bg-primary py-6 page-title-center">
             <div class="page-title-row">
 
                 <div class="page-title-content">
@@ -29,9 +27,7 @@
                         <li class="breadcrumb-item text-black-50 active" aria-current="page">{{ article.title }}</li>
                     </ol>
                 </nav>
-
             </div>
-        </div>
     </section>
 
     <!-- Content
