--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -32,20 +32,23 @@
 					<li class="menu-item {{ app.request.get('_route') == 'front_devis_new' ? 'active' : '' }}">
 							<a class="nav-link" href="{{ url('front_devis_new') }}">Faire une demande</a>
 					</li>
-					<li class="menu-item {{ app.request.get('_route') == 'front_contact' ? 'active' : '' }}">
-						<a class="btn btn-outline-secondary" href="{{ url('front_contact') }}">Contact</a>
-					</li>
 					{% if not app.user %}
+						<li class="menu-item {{ app.request.get('_route') == 'front_contact' ? 'active' : '' }}">
+							<a class="btn btn-outline-secondary" href="{{ url('front_contact') }}">Contact</a>
+						</li>
 						<li class="menu-item {{ app.request.get('_route') == 'app_login' ? 'active' : '' }}">
 							<a class="btn btn-info" href="{{ url('app_login') }}">Connexion</a>
 						</li>
 					{% endif %}
 					{% if app.user %}
-						<li class="menu-item {{ app.request.get('_route') == 'app_logout' ? 'active' : '' }}">
-							<a class="btn btn-danger" href="{{ url('app_logout') }}">Déconnexion</a>
-						</li>
 						<li class="menu-item {{ app.request.get('_route') == 'front_profile' ? 'active' : '' }}">
 							<a class="btn btn-info" href="{{ url('front_profile') }}">Profil</a>
+						</li>
+						<li class="menu-item {{ app.request.get('_route') == 'front_profile_project' ? 'active' : '' }}">
+							<a class="btn btn-outline-secondary" href="{{ url('front_profile_project') }}">Mes projets</a>
+						</li>
+						<li class="menu-item {{ app.request.get('_route') == 'app_logout' ? 'active' : '' }}">
+							<a class="btn btn-danger" href="{{ url('app_logout') }}">Déconnexion</a>
 						</li>
 					{% endif %}
 					{% if is_granted('ROLE_ADMIN') %}
