--- a/templates/front/profil/show.html.twig
+++ b/templates/front/profil/show.html.twig
@@ -12,11 +12,10 @@
 
                 <div class="page-title-content">
                     <div class="d-flex align-items-center">
-                        <img src="{% if app.user %}{{ asset('img/support/'~app.user.avatar) }} {% else %} {{ asset('img/support/support0.svg') }} {% endif %}" width="35" height="35" class="rounded-circle me-3 border border-width-3 border-white" alt="{{ app.user.username }}" width="120" height="120">
+                        <img src="{% if app.user %}{{ asset('uploads/avatar/'~app.user.avatar) }} {% else %} {{ asset('uploads/avatar/support0.svg') }} {% endif %}" width="35" height="35" class="rounded-circle me-3 border border-width-3 border-white" alt="{{ app.user.username }}" width="120" height="120">
                         <div>
                             <h2 class="h1 border-bottom border-dark border-width-4" style="font-weight: 800;color:white;">Profil de {{ app.user.prenom }}</h2>
                             <p class="mb-0 text-white-50">Rôle du forum : <strong>{% for role in app.user.roles %}{{ role }}{% if not loop.last %}, {% endif %}{% endfor %}</strong></p>
-                            <a href="{{ url('front_edit_profile', {id: app.user.id }) }}" class="btn btn-warning">Modifier mon profil</a>
                             <a href="{{ url('front_articles_new') }}" class="btn btn-secondary">Écrire au support</a>
                         </div>
                     </div>
